--- a/coreos-gocd/user-data.yml
+++ b/coreos-gocd/user-data.yml
@@ -48,15 +48,15 @@ coreos:
         ExecStartPre=/usr/bin/bash -c "/usr/bin/systemctl set-environment HOSTNAME=$(hostname -i)"
         ExecStartPre=/usr/bin/docker pull gocd/gocd-server:16.5.0-3305
         ExecStartPre=-/usr/bin/docker rm %n
-        ExecStartPre=-/usr/bin/mkdir -p /gocd-data/server-data
-        ExecStartPre=-/usr/bin/chown 999:rkt-admin /gocd-data/server-data
-        ExecStartPre=-/usr/bin/chown -R 999:rkt-admin /home/core/shared/gocd-data/conf
+        ExecStartPre=-/usr/bin/mkdir -p /gocd-data/server/data
+        ExecStartPre=-/usr/bin/cp -r /home/core/shared/gocd-data/conf /gocd-data/server/
+        ExecStartPre=-/usr/bin/chown -R 999:rkt-admin /gocd-data/server
         ExecStart=/usr/bin/sh -c "/usr/bin/docker run --rm --name %n \
                                   -p 8153:8153 \
                                   -e AGENT_KEY=123456789abcdef \
                                   -e SERVICE_NAME=gocd-server \
-                                  -v /home/core/shared/gocd-data/conf:/etc/go \
-                                  -v /gocd-data/server-data:/var/lib/go-server \
+                                  -v /gocd-data/server/conf:/etc/go \
+                                  -v /gocd-data/server/data:/var/lib/go-server \
                                   gocd/gocd-server:16.5.0-3305"
         ExecStop=/usr/bin/docker stop %n
         RestartSec=10
@@ -66,16 +66,16 @@ coreos:
       content: |
         [Unit]
         Description=gocd agent
-        After=docker.service
-        Requires=docker.service
-        After=gocd-server.service
-        Requires=gocd-server.service
+        After=docker.service gocd-server.service
+        Requires=docker.service gocd-server.service
         [Service]
         EnvironmentFile=/etc/environment
         TimeoutStartSec=0
         ExecStartPre=/usr/bin/bash -c "/usr/bin/systemctl set-environment HOSTNAME=$(hostname -i)"
         ExecStartPre=/usr/bin/docker pull stakater/gocd-agent:16.5.0-3305
         ExecStartPre=-/usr/bin/docker rm %n
+        ExecStartPre=-/usr/bin/mkdir -p /gocd-data/agent
+        ExecStartPre=-/usr/bin/cp -r /home/core/shared/gocd-data/sudoers /gocd-data/agent/
         ExecStart=/usr/bin/sh -c "/usr/bin/docker run --rm --name %n \
                 -e AGENT_KEY=123456789abcdef \
                 -e SERVICE_NAME=gocd-agent \
@@ -85,8 +85,7 @@ coreos:
                 -v /usr/lib/libdevmapper.so.1.02:/usr/lib/libdevmapper.so.1.02 \
                 -v /usr/lib64/libsystemd.so.0:/usr/lib/libsystemd.so.0 \
                 -v /usr/lib64/libgcrypt.so.20:/usr/lib/libgcrypt.so.20 \
-                -v /gocd-data/sudoers:/etc/sudoers.d \
-                -v /gocd-data:/gocd-data \
+                -v /gocd-data/agent/sudoers:/etc/sudoers.d \
                 -v /usr/bin/fleetctl:/usr/bin/fleetctl \
                 -v /etc/registry-certificates:/etc/registry-certificates \
                 -v /app:/app \
